# TemplateRepoC

./: CMakeLists.txt
example/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt
